feat: restrict cart and purchase functionalities to non-admin users and refactor backend security configuration.